refactor: special filters as pre-stage query for ids